src/test/deca/syntax/invalid/include-infiniteLoop.lex
includeFile-loop.decah:1: